--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body class="grid-container">
-  <header class="header" ><h1>Curriculum Vitae </h1></header>  
+  <header class="header" ><h1>Mi Portafolio </h1></header>  
   <nav class="bio"> <h1>BIO</h1>
     <img id="foto4x4"src="imagenes\foto4x4.jpg">
-    <p2>Soy un desarrollador de software apasionado con experiencia en una variedad de tecnologías y lenguajes de programación. Mi enfoque principal es crear soluciones eficientes y escalables, y tengo habilidades tanto en el desarrollo frontend como backend.</p2> 
+    <p2>Un desarrollador de software apasionado con experiencia en una variedad de tecnologías y lenguajes de programación. Mi enfoque principal es crear soluciones eficientes y escalables, y tengo habilidades tanto en el desarrollo frontend como backend.</p2> 
 
 </nav>
   <div class="sidebar">
@@ -88,31 +88,16 @@
 					<!-- Fin de Habilidades -->
 
                 </div>
-  <!-- <article class="main"> 
-    <ul class="datos-p">
-     <li class="datospp">MIS DATOS</li>
-    <li class="datospp">
-        <span class="font-weight-bold">Fecha de nacimiento:<br></span>01-04-1978
-    </li>
-    <li class="datospp>
-        <span class="font-weight-bold">Domicilio:<br></span>Domuyo 3153 - Cordoba
-    </li>
-    <li class="datospp">
-        <span class="font-weight-bold">Teléfono:<br></span>(0351) 1111111
-    </li> >
-</ul></article> -->
+  
 <article class="main"> 
     <ul class="datos-p">
-     <li class="datospp">MIS HOBBIES</li>
+     <li class="datospp"><a href="datos.html">MIS DATOS<a></li>
     <li class="datospp">
-        <span class="font-weight-bold">AAAAAAA<br></span>01-04-1978
-    </li>
-    <li class="datospp>
-		<span class="font-weight-bold">Domicilio:<br></span>Domuyo 3153 - Cordoba
-    </li>
-    <li class="datospp">
-        <span class="font-weight-bold">Teléfono:<br></span>(0351) 1111111
-    </li> 
+		<li class="datospp"><a href="pasatiempos.html">MIS PASATIEMPOS<a></li>
+			<li class="datospp">
+				<li class="datospp"><a href="proyectos.html">MIS PROYECTOS<a></li>
+					<li class="datospp">
+    
 </ul></article>
 <footer class="footer" >
 
